--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
 
     sdk: flutter
   http: ^0.13.3
-
+  #webview_flutter: ^3.0.2
+ # flutter_form_builder: ^7.1.1
+  select_form_field: ^2.2.0
+  flutter_svg: ^1.0.3
   flutter_localizations: # Add this line
     sdk: flutter
 
